Add more css for positioning and formatting

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 
     <div class="main_section">
         <div class="main_content">
-            <h1 class="hero_text">This website is awesome</h1>
+            <h1 class="hero_text">This website is <br> awesome</h1>
             <p class="hero_secondary">
-                This website has some subtext that
+                This website has some subtext that <br>
                 goes here under the main title.
-                It's a smaller font and the color
+                It's a smaller <br>font and the color
                 is lower contrast
             </p>
             <button class="signup">Sign up</button>
