--- a/index.html
+++ b/index.html
@@ -19,10 +19,9 @@
         <div class="main_content">
             <h1 class="hero_text">This website is <br> awesome</h1>
             <p class="hero_secondary">
-                This website has some subtext that <br>
-                goes here under the main title.
-                It's a smaller <br>font and the color
-                is lower contrast
+                This website has some subtext thatgoes here under the <br>
+                main title. It's a smaller font and the color is lower <br>
+                contrast
             </p>
             <button class="signup">Sign up</button>
         </div>
