--- a/index.html
+++ b/index.html
@@ -27,5 +27,53 @@
         </div>
         <img class="mainimg" src="./src/image.jpg">
     </div>
+
+    <div class="information">
+        <h1 class="information_header">Some random information</h1>
+        <div class="content_flex">
+            <div class="image_containers">
+                <div class="images"></div>
+                <p class="image_subtext">
+                    this is some subtext <br>
+                    under an ilustration <br>
+                    or image
+                </p>
+            </div>
+            <div class="image_containers">
+                <div class="images"></div>
+                <p class="image_subtext">
+                    this is some subtext <br>
+                    under an ilustration <br>
+                    or image
+                </p>
+            </div>
+            <div class="image_containers">
+                <div class="images"></div>
+                <p class="image_subtext">
+                    this is some subtext <br>
+                    under an ilustration <br>
+                    or image
+                </p>
+            </div>
+            <div class="image_containers">
+                <div class="images"></div>
+                <p class="image_subtext">
+                    this is some subtext <br>
+                    under an ilustration <br>
+                    or image
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <div class="quote">
+        <p class="italics">
+            This is an inspiring quote, or a testimonial from a <br>
+            customer. Maybe it's just filling up space, or maybe <br>
+            people will actually read it. Who knows? All I know <br>
+            is that it looks nice.
+        </p>
+        <h6 class="author">-Thor, God of Thunder</h6>
+    </div>
 </body>
 </html>
