Add the last section

--- a/index.html
+++ b/index.html
@@ -75,5 +75,17 @@
         </p>
         <h6 class="author">-Thor, God of Thunder</h6>
     </div>
+
+    <div class="call_to_action">
+        <div class="call_banner">
+            <div class="call_left">
+                <h5 class="call_header">Call to action! It's time!</h5>
+                <p class="call_p">
+                    Signup for our product by click that button right over there!
+                </p>
+            </div>
+            <button class="call_button">Sign up</button>
+        </div>
+    </div>
 </body>
 </html>
